--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
+            margin: 0;
+            padding: 0;
         }
         .glass-card {
             background: rgba(30, 41, 59, 0.7);
@@ -28,12 +30,14 @@
             box-shadow: 0 0 20px rgba(56, 189, 248, 0.2);
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
@@ -41,6 +45,8 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- 显式加载入口模块 -->
+    <script type="module" src="index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
